Currency converter project

--- a/index.html
+++ b/index.html
@@ -25,20 +25,24 @@
           <div class="from">
             <p>From</p>
             <div class="select-container">
+                <!--we using country flag API to call images of different countries-->
               <img src="https://flagsapi.com/US/flat/64.png" />
               <select name="from"></select>
             </div>
           </div>
+          <!--here we using icon to change currency horizontally-->
           <i class="fa-solid fa-arrow-right-arrow-left"></i>
           <div class="to">
             <p>To</p>
             <div class="select-container">
-              <img src="https://flagsapi.com/IN/flat/64.png" />
+                <!--we using country flag API to call images of different countries-->
+              <img src="https://flagsapi.com/GB/flat/64.png" />
               <select name="to"></select>
             </div>
           </div>
         </div>
-        <div class="msg">1USD = 80INR</div>
+        <!--we want to show some msg and then user can get values when enter the button-->
+        <div class="msg">Select Your Desirable Currencies First</div>
         <button>Get Exchange Rate</button>
       </form>
     </div>
