Currency converter project

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Currency Converter</title>
     <link href="style.css" rel="stylesheet" />
+    <!--we using fonts link here below-->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
@@ -25,7 +26,7 @@
           <div class="from">
             <p>From</p>
             <div class="select-container">
-                <!--we using country flag API to call images of different countries-->
+              <!--we using country flag API to call images of different countries-->
               <img src="https://flagsapi.com/US/flat/64.png" />
               <select name="from"></select>
             </div>
@@ -35,7 +36,7 @@
           <div class="to">
             <p>To</p>
             <div class="select-container">
-                <!--we using country flag API to call images of different countries-->
+              <!--we using country flag API to call images of different countries-->
               <img src="https://flagsapi.com/GB/flat/64.png" />
               <select name="to"></select>
             </div>
